# text-chunk-parser

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  DEV_INSTRUCTIONS.rst  DEV_TODO.md  Makefile  README.rst  mypy.ini  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  conf.py.bak  dev_instructions.rst  index.rst  installation.rst  make.bat  usage.rst
docs/api/: text_chunk_parser.app_config.rst  text_chunk_parser.app_data.rst  text_chunk_parser.cli.example.rst  text_chunk_parser.cli.main_cli.rst  text_chunk_parser.rst
scripts/: run.sh
secrets_example/: .twine-secrets-example.env
src/pfmsoft/text_chunk_parser/: __init__.py  cached_iterator.py  chunk_iterator.py  chunk_parser.py  enumerated_filtered_iterator.py  enumerated_iterator.py  exceptions.py  filtered_iterator.py  iter_cached.py  text_chunk_parser.py
src/pfmsoft/text_chunk_parser/app_lib/: logging.py
src/text_chunk_parser/: __init__.py  app_config.py  app_data.py
src/text_chunk_parser/app_lib/: file_hash.py  file_info.py  file_resource.py  hash_factory.py
src/text_chunk_parser/cli/: cli_app.py  example.py  file_hash_cli.py  main_cli.py
tests/: __init__.py
tests/text_chunk_parser/: chunk_iterator_test.py  conftest.py  iter_cache_test.py  test_cached_iterator.py  test_example_resources.py  test_json_dict.py
tests/text_chunk_parser/app_lib/: test_file_hash.py
tests/text_chunk_parser/cli/: test_file_hash_cli.py  test_main_cli.py  test_text_chunk_parser_cli.py
tests/text_chunk_parser/examples/: buried_text.py  flight.py  json_dict.py
tests/text_chunk_parser/resources/example/: update_resouces_test.py
(+4 files in other folders)
